<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_information"
            android:checkable="true"
            android:icon="@drawable/menu_index"
            android:title="@string/main_index" />
        <item
            android:id="@+id/nav_interst"
            android:checkable="true"
            android:icon="@drawable/menu_data"
            android:title="@string/data" />
        <item

            android:id="@+id/nav_my_attention"
            android:checkable="true"
            android:icon="@drawable/menu_impress"
            android:title="@string/impress" />
        <item
            android:id="@+id/nav_attention_me"
            android:checkable="true"
            android:icon="@drawable/menu_invite"
            android:title="@string/invite" />
    </group>

    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_about_aipolis"
                android:checkable="true"
                android:icon="@drawable/menu_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_setting"
                android:checkable="true"
                android:icon="@drawable/menu_setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_exit"
                android:checkable="true"
                android:icon="@drawable/menu_exit"
                android:title="退出登录" />
        </menu>
    </item>


</menu>